# https://docs.pytest.org/en/7.1.x/explanation/goodpractices.html
# https://github.com/jazzband/pip-tools#requirements-from-pyprojecttoml

[build-system]
requires = ["hatchling >= 1.18.0", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "justscheduleit"
dynamic = ["version"]
description = "Simple in-process task scheduler for Python apps"
keywords = ["scheduler", "cron"]
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    { name = "Alexey Shokov" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",

    "Topic :: System",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Office/Business :: Scheduling",

    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",

    "Framework :: AsyncIO",
    "Framework :: AnyIO",

    "Development Status :: 4 - Beta",
]
dependencies = [
    "typing_extensions ~=4.10",
    "anyio >=3.6,<5.0",
]

# See also https://daniel.feldroy.com/posts/2023-08-pypi-project-urls-cheatsheet
[project.urls]
homepage = 'https://github.com/alexeyshockov/justscheduleit'
docs = 'https://alexeyshockov.github.io/justscheduleit/'
changelog = 'https://github.com/alexeyshockov/justscheduleit/blob/main/CHANGELOG.md'

# See https://hatch.pypa.io/latest/config/dependency/
[project.optional-dependencies]
cron = [
    "croniter >=2.0"
]
dev = [
    "pytest ~=8.1",
    "pytest-asyncio ~=0.23",
    "pytest-cov ~=5.0",
    "pytest-mock ~=3.14",
    "coverage[toml] ~=7.6",

    "types-croniter",
]
dev-examples = [
    "fast-depends ~=2.4",
    "fastapi-slim ~=0.111",
    "uvicorn ~=0.30",
    "uvloop ~=0.15",
    "structlog ~=24.0",
]

# See https://github.com/ofek/hatch-vcs#hatch-vcs
[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
skip-excluded-dirs = true
exclude = [
    "/tests",
    "/docs",
]

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["justscheduleit"]

[tool.mypy]
#strict = true
python_version = "3.9"
install_types = true
non_interactive = true

# from https://blog.wolt.com/engineering/2021/09/30/professional-grade-mypy-configuration/
disallow_untyped_defs = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
show_error_codes = true
warn_unused_ignores = false

disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = false

[tool.ruff]
line-length = 120
target-version = "py39"


[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "Q",  # flake8-quotes
]
#ignore = [
#    "E501",  # line too long, handled by black
#    "C901",  # too complex
#]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q -m 'not slow'"
testpaths = [
    "tests",
]
markers = [
]

[tool.coverage.run]
parallel = true
branch = true
concurrency = [
    "multiprocessing",
    "thread"
]
source = [
    "examples",
    "justscheduleit",
    "tests"
]
context = '${CONTEXT}'
omit = [
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
    ".*# pragma: no cover",
    "if __name__ == .__main__.:",
    "self.logger",
    "def __repr__",
    "lambda: None",
    "from .*",
    "import .*",
    '@(abc\.)?abstractmethod',
    "raise NotImplementedError",
    'raise AssertionError',
    'raise ValueError',
    'logger\..*',
    "pass",
    '\.\.\.',
]
omit = [
    '*/__about__.py',
    '*/__main__.py',
    '*/__init__.py',
    '*/annotations.py',
]
